--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,19 +8,20 @@
             "name": "(gdb) Launch Shim",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/overture/OvertureShim",
-            "miDebuggerPath": "/usr/bin/gdb",
-            "sourceFileMap": 
-            {
-                "/path/in/build/system": "/home/overture/OvertureShim"
-            },
-            "args": [],
+            "program": "/home/overture/OvertureShim/src/gridShimIn",
+            "args": 
+            [
+                "/home/overture/OvertureShim/overtureGrids/sqrInSqr2.hdf", 
+                "debugTest.txt"
+            ],
             "stopAtEntry": false,
+            "justMyCode": false,
             "cwd": "/home/overture/OvertureShim",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "setupCommands": [
+            "setupCommands": 
+            [
                 {
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
@@ -32,6 +33,11 @@
                     "ignoreFailures": true
                 }
             ],
+            "miDebuggerPath": "/usr/bin/gdb",  // Optional: explicitly set if GDB is not on PATH
+            "sourceFileMap": 
+            {
+                "/home/user/OvertureShim/src/file": "/home/overture/OvertureShim/src/gridShimIn.o"
+            },
 
         }
 
